<resources>
    <string name="app_name">Drachuk Eugene\'s App</string>
    <string name="info">Drachuk Eugene</string>\
    <string name="github_link">https://github.com/EvGem7</string>
    <string name="welcome_text">Welcome, dude</string>
    <string name="next_button">Next</string>
    <string name="app_description">This is my super launcher!</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="standard_layout">Standard layout</string>
    <string name="tight_layout">Tight layout</string>
    <string name="standard_layout_description">Portrait: 4 icons in a row\nLandscape: 6 icons in a row</string>
    <string name="tight_layout_description">Portrait: 5 icons in a row\nLandscape: 7 icons in a row</string>
    <string name="delete_action">Delete</string>
    <string name="menu_grid">Grid</string>
    <string name="menu_list">List</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_reconfigure_title">Reconfigure</string>
    <string name="settings_reconfigure_summary">Start welcome page on the next app start</string>
    <string name="sort">Sort</string>
    <string name="information_action">Information</string>
    <string name="snackbar_show_frequency">%s has been launched %d times!</string>
    <string name="launcher">Launcher</string>
    <string name="phone_number">+375447509386</string>
    <string name="email">evg200003@gmail.com</string>
    <string name="credit_card">4916 2703 9637 2983</string>
    <string name="telegram">https://t.me/evgem</string>
    <string name="no_app">Tap here to add contact</string>
    <string name="add_favourite">Add to favourites</string>
    <string name="remove_favourite">Remove from favourites</string>
    <string name="favourites">Favourites</string>
    <string name="frequency_action">Frequency</string>
    <string name="desktop">Desktop</string>
    <string name="add_app">Add application</string>
    <string name="add_contact">Add contact</string>
    <string name="add_site">Add site</string>
    <string name="dialog_add_site">Type URL of the site</string>
    <string name="cannot_launch">Cannot launch this :(</string>
    <string name="settings_background_image_refresh">Background image refresh rate</string>
    <string name="settings_background_image_sources">Background image sources</string>
    <string name="settings_background_image_update">Update background image</string>
    <string name="settings_background_image_unique">Unique background image</string>
    <string name="settings_background_image_unique_summary">Background images on each screen will differ from each other</string>
    <string name="send_notification">Send notification</string>

</resources>
