<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreferenceCompat
        android:key="dark_theme_picker"
        android:title="@string/dark_theme" />

    <SwitchPreferenceCompat
        android:key="tight_layout_picker"
        android:title="@string/tight_layout" />

    <CheckBoxPreference
        android:key="run_welcome_activity_checkbox"
        android:summary="@string/settings_reconfigure_summary"
        android:title="@string/settings_reconfigure_title" />

    <ListPreference
        android:entries="@array/showed_sort_type"
        android:entryValues="@array/sort_type"
        android:key="sort_type"
        android:title="@string/sort" />

    <SwitchPreferenceCompat
        android:key="favourite_switch"
        android:title="@string/favourites" />

</PreferenceScreen>