<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_desktop"
            android:icon="@drawable/ic_desktop"
            android:title="@string/desktop"/>

        <item
            android:id="@+id/menu_grid"
            android:icon="@drawable/ic_menu_launcher"
            android:title="@string/menu_grid" />

        <item
            android:id="@+id/menu_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
    <group android:checkableBehavior="none">
        <item android:id="@+id/menu_notification"
            android:title="@string/send_notification" />
    </group>
</menu>